@@ -1,5 +1,5 @@
 ========================================================================
-README for Augmented Reality Sandbox (SARndbox) version 2.5
+README for Augmented Reality Sandbox (SARndbox) version 2.6
 Copyright (c) 2012-2018 Oliver Kreylos
 ========================================================================
 
@@ -15,8 +15,8 @@ surface using a calibrated projector.
 Requirements
 ============
 
-The Augmented Reality Sandbox requires Vrui version 4.5 build 001 or
-newer, and the Kinect 3D Video Capture Project version 3.5 or newer.
+The Augmented Reality Sandbox requires Vrui version 4.6 build 005 or
+newer, and the Kinect 3D Video Capture Project version 3.7 or newer.
 
 Installation Guide
 ==================
@@ -42,7 +42,7 @@ references to ~/src in the following instructions need to be changed.
 2. Change into the Augmented Reality Sandbox's base directory:
    > cd SARndbox-<version>
 
-3. If the Vrui version installed in step 0 was not 4.5, or Vrui's
+3. If the Vrui version installed in step 0 was not 4.6, or Vrui's
    installation directory was changed from the default of /usr/local,
    adapt the makefile using a text editor. Change the value of
    VRUI_MAKEDIR close to the beginning of the file as follows:
