@@ -1,2 +1,2 @@
-Augmented Reality Sandbox 2.5
-release date 05/17/2018
+Augmented Reality Sandbox 2.6
+release date 12/16/2018
